# vLLM-ROCm-Windows

./: .gitignore  README.md
docs/: csrc-native-build-roadmap.md  s5-attention-lever-and-aiter-rdna3.md  study-f1-s2-s5-aiter-plan.md  vllm-nvidia-vs-ours-gap-study.md
experiments/phase0_hip_ext/: README.md  bindings.cu  build_and_test.py  kernel.cu
experiments/phase0_kernels/: README.md  bindings.cu  build_and_test.py  ops.cu
experiments/phase0_triton/: README.md  triton_kernels.py
experiments/vllm_c_ext/: build_attn_c.py  build_attn_flash_c.py  build_attn_flash_run.bat  build_attn_run.bat  build_c_ext.py  build_cache_c.py  build_cache_run.bat  build_moe_c.py  build_moe_run.bat  build_rocm_c.py  build_rocm_run.bat  build_run.bat  paged_attention_flash.cu  win_attn_bindings.cu  win_c_bindings.cpp  win_cache_bindings.cu  win_moe_bindings.cu
experiments/w4_gemv/: awq_gemv_m1.py  bench_gemv_k.py  run_variants_bench.py
patches/: README.md
patches/vllm/: conch-group-size.patch  kvarn.patch  (+2 more)
research/: 01-feasibility-and-verdict.md  02-architecture-and-port-matrix.md  03-environment-toolchain-build.md  04-hard-parts-kernels-quant.md  05-roadmap-gates-risks.md  06-enhancements-sota.md  README.md
run/: README.md  batch_sweep.py  bench.py  first_token.py  precision_check.py  profile_decode.py  test_compile.py
tools/: fix_tokenizer_config.py  patch_vllm.py
windows_rocm_plugin/: pyproject.toml  sitecustomize.py
windows_rocm_plugin/vllm_windows_rocm/: __init__.py  awq_gemv.py  bf16_gemv.py  bootstrap.py  cops.py  moe_decode.py  platform.py  torchdist_shim.py
(+23 files in other folders)
